--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -129,112 +129,173 @@
     path: C:\ProgramData\LoadGen\Director
     state: directory
 
+
+
+
+
+
 - name: Create ProgramData for Director Config
   win_copy:
     src: LoadGenDatasources.xml
     dest: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
 
-- name: Set the LoadGen DatasourceName
+- name: Set the LoadGen Datasources configuration property DatasourceName
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='DatasourceName']"
    fragment: "{{ datasource_name }}"
    type: text
 
-- name: Set the LoadGen Active
+- name: Set the LoadGen Datasources configuration property Active
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='Active']"
-   fragment: "{{ datasource_active }}"
+   fragment: "{{ datasource_active | lower }}"
    type: text
 
-- name: Set the LoadGen DatabaseName
+- name: Set the LoadGen Datasources configuration property DatabaseName
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='DatabaseName']"
    fragment: "{{ datasource_databasename }}"
    type: text
 
-- name: Set the LoadGen IntegratedSecurity
+- name: Set the LoadGen Datasources configuration property IntegratedSecurity
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='IntegratedSecurity']"
-   fragment: "{{ datasource_integrated_security }}"
+   fragment: "{{ datasource_integrated_security | lower }}"
    type: text
 
-- name: Set the LoadGen Password
+- name: Set the LoadGen Datasources configuration property Password
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='Password']"
    fragment: "{{ datasource_password }}"
    type: text
 
-- name: Set the LoadGen UserId
+- name: Set the LoadGen Datasources configuration property UserId
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='UserId']"
    fragment: "{{ datasource_user_id }}"
    type: text
 
-- name: Set the LoadGen Servername
+- name: Set the LoadGen Datasources configuration property Servername
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='Servername']"
    fragment: "{{ datasource_servername }}"
    type: text
 
-- name: Set the LoadGen TableCreateOnLoadTest
+- name: Set the LoadGen Datasources configuration property TableCreateOnLoadTest
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='TableCreateOnLoadTest']"
-   fragment: "{{ datasource_table_create_on_load_test }}"
+   fragment: "{{ datasource_table_create_on_load_test | lower }}"
    type: text
 
-- name: Set the LoadGen TablenameDuaf
+- name: Set the LoadGen Datasources configuration property TablenameDuaf
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='TablenameDuaf']"
    fragment: "{{ datasource_tablename_duaf }}"
    type: text
 
-- name: Set the LoadGen TablenamePerformanceCounters
+- name: Set the LoadGen Datasources configuration property TablenamePerformanceCounters
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='TablenamePerformanceCounters']"
    fragment: "{{ datasource_tablename_performance_counters }}"
    type: text
 
-- name: Set the LoadGen TableprefixDuaf
+- name: Set the LoadGen Datasources configuration property TableprefixDuaf
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='TableprefixDuaf']"
    fragment: "{{ datasource_tableprefix_duaf }}"
    type: text
 
-- name: Set the LoadGen TableprefixPerformanceCounters
+- name: Set the LoadGen Datasources configuration property TableprefixPerformanceCounters
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='TableprefixPerformanceCounters']"
    fragment: "{{ datasource_tableprefix_performance_counters }}"
    type: text
 
-- name: Set the LoadGen UpdateInterval
+- name: Set the LoadGen Datasources configuration property UpdateInterval
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='UpdateInterval']"
    fragment: "{{ datasource_update_interval }}"
    type: text
 
-- name: Set the LoadGen DebugSqlUpdateCount
+- name: Set the LoadGen Datasources configuration property DebugSqlUpdateCount
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='DebugSqlUpdateCount']"
-   fragment: "{{ datasource_debug_sql_update_count }}"
+   fragment: "{{ datasource_debug_sql_update_count | lower }}"
    type: text
 
-- name: Set the LoadGen TableSmdCreateOnLoadTest
+- name: Set the LoadGen Datasources configuration property TableSmdCreateOnLoadTest
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='TableSmdCreateOnLoadTest']"
-   fragment: "{{ dataspirce_table_smd_create_on_load_test }}"
+   fragment: "{{ datasource_table_smd_create_on_load_test | lower }}"
+   type: text
+
+
+
+- name: Create ProgramData for Director Config
+  win_copy:
+    src: LoadGenRunAsProfiles.xml
+    dest: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
+
+- name: Set the LoadGen RunAsProfiles configuration property profileName
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
+   xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='profileName']"
+   fragment: "{{ profile_name }}"
+   type: text
+
+- name: Set the LoadGen RunAsProfiles configuration property Domain
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
+   xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='Domain']"
+   fragment: "{{ profile_domain }}"
+   type: text
+
+- name: Set the LoadGen RunAsProfiles configuration property DomainController
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
+   xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='DomainController']"
+   fragment: "{{ DomainController }}"
+   type: text
+   
+- name: Set the LoadGen RunAsProfiles configuration property DomainDnsName
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
+   xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='DomainDnsName']"
+   fragment: "{{ profile_domain_dns_name }}"
+   type: text
+
+- name: Set the LoadGen RunAsProfiles configuration property Password
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
+   xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='Password']"
+   fragment: "{{ profile_password }}"
+   type: text
+   
+- name: Set the LoadGen RunAsProfiles configuration property Username
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
+   xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='Username']"
+   fragment: "{{ profile_username }}"
+   type: text
+
+- name: Set the LoadGen RunAsProfiles configuration property Workgroup
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
+   xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='Workgroup']"
+   fragment: "{{ profile_workgroup | lower }}"
    type: text
