--- a/ansible/azure-keyvault.yml
+++ b/ansible/azure-keyvault.yml
@@ -18,6 +18,17 @@
     my_password: "{{ kvSecret['secrets'][0]['secret'] }}"
     cashable: true
 
+- name: Get secret value
+  azure_rm_keyvaultsecret_info:
+    vault_uri: "{{ keyvaulturi }}"
+    name: "{{ sql_admin }}"
+  register: kvSecret
+
+- name: set secret fact
+  set_fact: 
+    sql_password: "{{ kvSecret['secrets'][0]['secret'] }}"
+    cashable: true
+
 - name: Create group_vars directory
   file:
     path: group_vars
@@ -47,6 +58,11 @@
   lineinfile:
     path: group_vars/mgnt.yml
     line: 'ansible_password: "{{ my_password }}"'
+
+- name: Output key sql_password
+  lineinfile:
+    path: group_vars/mgnt.yml
+    line: 'sql_password: "{{ sql_password }}"'
 
 - name: Create group_vars file
   file:
