--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -26,6 +26,7 @@
   - loadgen
   vars:
     dns_domain_name: 'GO.EUC'
+    domain_name: GO
     domain_admin_user: "GO\\{{ ansible_user }}"
     ansible_connection: winrm
     ansible_winrm_transport: ntlm
