--- a/ansible/roles/loadgen/tasks/datasource.yml
+++ b/ansible/roles/loadgen/tasks/datasource.yml
@@ -21,7 +21,7 @@
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='DatabaseName']"
-   fragment: "{{ datasource_databasename }}"
+   fragment: "{{ sql_database }}"
    type: text
 
 - name: Set the LoadGen Datasources configuration property IntegratedSecurity
@@ -35,21 +35,21 @@
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='Password']"
-   fragment: "{{ datasource_password }}"
+   fragment: "{{ sql_password }}"
    type: text
 
 - name: Set the LoadGen Datasources configuration property UserId
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='UserId']"
-   fragment: "{{ datasource_user_id }}"
+   fragment: "{{ sql_admin }}"
    type: text
 
 - name: Set the LoadGen Datasources configuration property Servername
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='Servername']"
-   fragment: "{{ datasource_servername }}"
+   fragment: "{{ sql_server }}"
    type: text
 
 - name: Set the LoadGen Datasources configuration property TableCreateOnLoadTest
