--- a/ansible/roles/loadgen/tasks/profiles.yml
+++ b/ansible/roles/loadgen/tasks/profiles.yml
@@ -14,35 +14,35 @@
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
    xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='Domain']"
-   fragment: "{{ profile_domain }}"
+   fragment: "{{ domain_name }}"
    type: text
 
 - name: Set the LoadGen RunAsProfiles configuration property DomainController
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
    xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='DomainController']"
-   fragment: "{{ profile_domain_controller }}"
+   fragment: "{{ groups[dc][0] }}"
    type: text
    
 - name: Set the LoadGen RunAsProfiles configuration property DomainDnsName
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
    xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='DomainDnsName']"
-   fragment: "{{ profile_domain_dns_name }}"
+   fragment: "{{ dns_domain_name }}"
    type: text
 
 - name: Set the LoadGen RunAsProfiles configuration property Password
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
    xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='Password']"
-   fragment: "{{ profile_password }}"
+   fragment: "{{ ansible_user }}"
    type: text
    
 - name: Set the LoadGen RunAsProfiles configuration property Username
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
    xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='Username']"
-   fragment: "{{ profile_username }}"
+   fragment: "{{ ansible_password }}"
    type: text
 
 - name: Set the LoadGen RunAsProfiles configuration property Workgroup
