--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -6,9 +6,18 @@
     - azure.azcollection
 
   tasks:
+
+  - name: Prints two lines of messages, but only if there is an environment value set
+    ansible.builtin.debug:
+      msg:
+      - "Vault: {{ vault_name }}"
+      - "Resource group: {{ resource_group }}"
+
   - name: Start the Azure Key Vault actions
     inlcude: azure-keyvault.yml
-  
+
+
+
 # - name: Domain Controller
 #   hosts: dc
 #   roles:
