Using include tasks for the azure keyvault part

--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -14,7 +14,7 @@
       - "Resource group: {{ resource_group }}"
 
   - name: Start the Azure Key Vault actions
-    inlcude: azure-keyvault.yml
+    include_tasks: azure-keyvault.yml
 
 
 
