--- a/ansible/azure-keyvault.yml
+++ b/ansible/azure-keyvault.yml
@@ -1,3 +1,9 @@
+- name: Prints two lines of messages, but only if there is an environment value set
+  ansible.builtin.debug:
+    msg:
+    - "Vault: {{ vault_name }}"
+    - "Resource group: {{ resource_group }}"
+
 - name: Get Key Vault by name
   azure_rm_keyvault_info:
     resource_group: "{{ resource_group }}"
