--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -11,15 +11,15 @@
 
 
 
-# - name: Domain Controller
-#   hosts: dc
-#   roles:
-#   - domain-controller
-#   vars:
-#     ansible_connection: winrm
-#     ansible_winrm_transport: ntlm
-#     ansible_winrm_server_cert_validation: ignore
-#     ansible_port: 5985
+- name: Domain Controller
+  hosts: dc
+  roles:
+  - domain-controller
+  vars:
+    ansible_connection: winrm
+    ansible_winrm_transport: ntlm
+    ansible_winrm_server_cert_validation: ignore
+    ansible_port: 5985
 
 - name: Management Server
   hosts: mgnt
