--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -29,7 +29,7 @@
   vars:
     dns_domain_name: 'GO.EUC'
     domain_name: GO
-    domain_controller: "{{ groups[dc | first] | first }}"
+    domain_controller: "{{ hostvars[dc][0] }}"
     domain_admin_user: "GO\\{{ ansible_user }}"
     ansible_connection: winrm
     ansible_winrm_transport: ntlm
