--- a/.devops/pipelines/azure-infra.yaml
+++ b/.devops/pipelines/azure-infra.yaml
@@ -14,12 +14,14 @@ parameters:
   - Cards
   - Flowers
 - name: azureDelivery
-  displayName: DeliveryModel
+  displayName: Desktop Delivery Model
   type: string
   default: Citrix Virtual Apps & Desktop Services
   values:
-  - Citrix Virtual Apps & Desktop Services
+  - None
   - Azure Virtual Desktop
+  - Citrix Virtual Apps & Desktop Services
+  - VMware Horizon Cloud
 - name: azureBuild
   displayName: Azure environment action
   type: string
@@ -66,8 +68,10 @@ steps:
       $terraformVariable += "devops_pool=`"${{ parameters.azureEnvironment }}`""
 
       switch ("${{ parameters.azureDelivery }}") {
+        "None" {$delivery = "none"}
         "Citrix Virtual Apps & Desktop Services" {$delivery = "cvads"}
         "Azure Virtual Desktop" {$delivery = "avd"}
+        "VMware Horizon Cloud" {$delivery = "horizonc"}
       }
 
       $terraformVariable += "delivery=`"$delivery`""
