--- a/.devops/pipelines/azure-infra.yaml
+++ b/.devops/pipelines/azure-infra.yaml
@@ -13,6 +13,15 @@ parameters:
   values:
   - Cards
   - Flowers
+- name: azureDelivery
+  displayName: Desktop Delivery Model
+  type: string
+  default: Citrix Virtual Apps & Desktop Services
+  values:
+  - None
+  - Azure Virtual Desktop
+  - Citrix Virtual Apps & Desktop Services
+  - VMware Horizon Cloud
 - name: azureBuild
   displayName: Azure environment action
   type: string
@@ -57,6 +66,15 @@ steps:
       $terraformVariable += "azure_tenant_id=`"$(azure_tenant_id)`""
       $terraformVariable += "devops_token=`"$(devops_token)`""
       $terraformVariable += "devops_pool=`"${{ parameters.azureEnvironment }}`""
+
+      switch ("${{ parameters.azureDelivery }}") {
+        "None" {$delivery = "none"}
+        "Citrix Virtual Apps & Desktop Services" {$delivery = "cvads"}
+        "Azure Virtual Desktop" {$delivery = "avd"}
+        "VMware Horizon Cloud" {$delivery = "horizonc"}
+      }
+
+      $terraformVariable += "delivery=`"$delivery`""
 
       Set-Content -Value $terraformVariable -Path terraform.tfvars -Force
     workingDirectory: '$(Build.Repository.LocalPath)/terraform/azure'
