--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -9,8 +9,6 @@
   - name: Start the Azure Key Vault actions
     include_tasks: azure-keyvault.yml
 
-
-
 - name: Domain Controller
   hosts: dc
   roles:
@@ -37,16 +35,16 @@
     ansible_winrm_server_cert_validation: ignore
     ansible_port: 5985
 
-# - name: Citrix Cloud Connector
-#   hosts: cc
-#   serial: 1
-#   roles:
-#   - domain-join
-#   - citrix-cloud-connector
-#   vars:
-#     dns_domain_name: 'GO.EUC'
-#     domain_admin_user: "GO\\{{ ansible_user }}"
-#     ansible_connection: winrm
-#     ansible_winrm_transport: ntlm
-#     ansible_winrm_server_cert_validation: ignore
-#     ansible_port: 5985
+- name: Citrix Cloud Connector
+  hosts: cc
+  serial: 1
+  roles:
+  - domain-join
+  - citrix-cloud-connector
+  vars:
+    dns_domain_name: 'GO.EUC'
+    domain_admin_user: "GO\\{{ ansible_user }}"
+    ansible_connection: winrm
+    ansible_winrm_transport: ntlm
+    ansible_winrm_server_cert_validation: ignore
+    ansible_port: 5985
