--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -108,6 +108,18 @@
     ansible_winrm_server_cert_validation: ignore
     ansible_port: 5985
 
+- name: Domain Controller config
+  hosts: dc
+  roles:
+  - domain-config
+  vars:
+    ansible_connection: winrm
+    ansible_winrm_transport: ntlm
+    ansible_winrm_server_cert_validation: ignore
+    ansible_port: 5985
+    ansible_user: "GO\\{{ ansible_user }}"
+    ansible_password: '{{ ansible_password }}'
+
 - name: Management Server
   hosts: mgnt
   roles:
