--- a/.devops/pipelines/azure-packer-image.yml
+++ b/.devops/pipelines/azure-packer-image.yml
@@ -38,7 +38,7 @@ jobs:
     displayName: 'Download and install Packer'
 
   - task: PowerShell@2
-    displayName: Packer variables
+    displayName: Setting Packer variables
     inputs:
       targetType: 'inline'
       script: |
@@ -47,7 +47,7 @@ jobs:
         $packerVariable += "azure_client_secret=`"$(azure_client_secret)`""
         $packerVariable += "azure_subscription_id=`"$(azure_subscription_id)`""
         $packerVariable += "azure_tenant_id=`"$(azure_tenant_id)`""
-        $packerVariable += "var.environment = `${{ lower(parameters.azureWorkspace) }}`"
+        $packerVariable += "var.environment=`"${{ lower(parameters.azureWorkspace) }}`""
         Set-Content -Value $packerVariable -Path azure.pkrvars.hcl -Force
       workingDirectory: '$(Build.Repository.LocalPath)/packer/azure'
 
@@ -56,6 +56,12 @@ jobs:
     inputs:
       script: | 
         packer init image.pkr.hcl
+      workingDirectory: '$(Build.Repository.LocalPath)/packer/azure'
+
+  - task: CmdLine@2
+    displayName: Packer validate
+    inputs:
+      script: | 
       workingDirectory: '$(Build.Repository.LocalPath)/packer/azure'
 
   - task: CmdLine@2
