init and format disk

--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -114,6 +114,7 @@
   roles:
   - domain-join
   - loadgen
+  - managed-disk
   vars:
     dns_domain_name: 'GO.EUC'
     domain_admin_user: "GO\\{{ ansible_user }}"
