--- a/ansible/roles/managed-disk/tasks/main.yml
+++ b/ansible/roles/managed-disk/tasks/main.yml
@@ -4,7 +4,7 @@
     
 - name: Format partition and label disk
   community.windows.win_format:
-    drive_letter: D
+    drive_letter: E
     file_system: NTFS
     new_label: Data
     full: True
