--- a/ansible/roles/managed-disk/tasks/main.yml
+++ b/ansible/roles/managed-disk/tasks/main.yml
@@ -4,13 +4,13 @@
 
 - name: create partition
   win_partition:
-    drive_letter: D
+    drive_letter: E
     partition_size: -1
     disk_number: 1
 
 - name: format partition and label disk
   community.windows.win_format:
-    drive_letter: D
+    drive_letter: E
     file_system: NTFS
     new_label: Data
     full: True
