--- a/.devops/pipelines/azure-infra.yaml
+++ b/.devops/pipelines/azure-infra.yaml
@@ -67,7 +67,8 @@ steps:
       $terraformVariable += "azure_tenant_id=`"$(azure_tenant_id)`""
       $terraformVariable += "devops_token=`"$(devops_token)`""
       $terraformVariable += "devops_pool=`"${{ parameters.azureEnvironment }}`""
-      $terraformVariable += "devops_project=$(System.TeamProject)"
+      $terraformVariable += "devops_project=`"$(System.TeamProject)`""
+      $terraformVariable += "devops_url=`"$(System.CollectionUri)`""
 
       switch ("${{ parameters.azureDelivery }}") {
         "None" {$delivery = "none"}
