--- a/ansible/roles/domain-config/tasks/main.yml
+++ b/ansible/roles/domain-config/tasks/main.yml
@@ -1,3 +1,11 @@
+- name: Wait for domain controller to be ready
+    win_shell: |
+      Get-ADDomain -Server "{{ dns_domain_name }}"
+    register: dc_ready
+    until: dc_ready is not failed
+    ignore_errors: yes
+    retries: 60
+    delay: 15
 
 - name: Check for ActiveDirectory DSC Powershell module
   win_psmodule:
