--- a/ansible/roles/domain-config/tasks/main.yml
+++ b/ansible/roles/domain-config/tasks/main.yml
@@ -1,6 +1,5 @@
 - name: Wait for domain controller to be ready
-    win_shell: |
-      Get-ADDomain -Server "{{ dns_domain_name }}"
+    win_shell: Get-ADDomain -Server "{{ dns_domain_name }}"
     register: dc_ready
     until: dc_ready is not failed
     ignore_errors: yes
