--- a/ansible/roles/domain-config/tasks/main.yml
+++ b/ansible/roles/domain-config/tasks/main.yml
@@ -1,10 +1,19 @@
-- name: Wait for domain controller to be ready
-    win_shell: Get-ADDomain -Server "{{ dns_domain_name }}"
-    register: dc_ready
-    until: dc_ready is not failed
-    ignore_errors: yes
-    retries: 60
-    delay: 15
+- name: Ensure AD Services is in a running state
+  win_service:
+    name: NTDS 
+    state: started
+  register: ntds
+  until: ntds.state == "running"
+  retries: 30
+  delay: 30
+  
+#- name: Wait for domain controller to be ready
+#    win_shell: Get-ADDomain -Server "{{ dns_domain_name }}"
+#    register: dc_ready
+#    until: dc_ready is not failed
+#    ignore_errors: yes
+#    retries: 60
+#    delay: 15
 
 - name: Check for ActiveDirectory DSC Powershell module
   win_psmodule:
