Added the default LoadGen options configuration

--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -131,6 +131,9 @@
 - name: Configure the LoadGen Datasource
   include: datasource.yml
 
+- name: Configure the LoadGen Options
+  include: options.yml
+
 - name: Configure the LoadGen RunAsProfiles
   include: profiles.yml
 
