Minor adjustement in the docker file location

--- a/.devops/pipelines/docker.yml
+++ b/.devops/pipelines/docker.yml
@@ -16,7 +16,7 @@ steps:
   inputs:
     repository: '$(imageName)'
     command: 'build'
-    Dockerfile: 'docker/dockerfile'
+    Dockerfile: 'docker/devops-agent/dockerfile'
     tags: |
       latest
       $(Build.BuildId)
