--- a/docker/devops-agent/dockerfile
+++ b/docker/devops-agent/dockerfile
@@ -40,7 +40,7 @@ RUN pip install "pywinrm>=0.3.0"
 # Ansible and the azure requirements
 RUN curl https://raw.githubusercontent.com/ansible-collections/azure/dev/requirements-azure.txt --output requirements-azure.txt
 RUN pip install -r requirements-azure.txt
-RUN ansible-galaxy collection install azure.azcollection --force
+RUN ansible-galaxy collection install azure.azcollection
 
 # Microsoft PowerShell
 RUN wget -q https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb
