--- a/docker/devops-agent/dockerfile
+++ b/docker/devops-agent/dockerfile
@@ -47,6 +47,7 @@ RUN wget -q https://packages.microsoft.com/config/ubuntu/20.04/packages-microsof
 RUN dpkg -i packages-microsoft-prod.deb
 
 RUN apt-get update
+RUN apt install --fix-broken
 RUN apt-get install -y powershell
 
 # Hasicorp Packer
