Added the Citrix Cloud configuration

--- a/ansible/azure-playbook.yml
+++ b/ansible/azure-playbook.yml
@@ -49,3 +49,8 @@
     ansible_winrm_transport: ntlm
     ansible_winrm_server_cert_validation: ignore
     ansible_port: 5985
+
+- name: Citrix Cloud Configuration
+  connection: local
+  roles:
+  - citrix-cloud-configuration
