--- a/ansible/roles/citrix-cloud-connector/tasks/main.yml
+++ b/ansible/roles/citrix-cloud-connector/tasks/main.yml
@@ -72,7 +72,8 @@
 - name: Install Citrix Cloud Connector
   win_package:
     path: C:\Download\Citrix\cwcconnector.exe
-    product_id: '{E6CF2E41-E333-45D6-8EB6-CC429030F5A8}' # Citrix Cloud Services Agent System
+    #product_id: '{E6CF2E41-E333-45D6-8EB6-CC429030F5A8}' # Citrix Cloud Services Agent System {096D19F4-D07A-4024-8003-E22B99118A15}
+    creates_path : 'C:\Program Files\Citrix\CloudServices\Agent\Citrix.CloudServices.Agent.exe'
     arguments: /q /CustomerName:"{{ citrix_org_id }}" /ClientId:"{{ citrix_client_id }}" /ClientSecret:"{{ citrix_client_secret }}" /Location:"{{ citrix_resource_id }}" /AcceptTermsOfService:true
     expected_return_code: [0]
     state: present
