--- a/.devops/pipelines/vmware/image.yml
+++ b/.devops/pipelines/vmware/image.yml
@@ -16,29 +16,29 @@ stages:
         steps:
 
         - task: PowerShell@2
-            displayName: Terraform variables
-            inputs:
-              targetType: 'inline'
-              script: |
+          displayName: Terraform variables
+          inputs:
+            targetType: 'inline'
+            script: |
 
-                $variables = @()
-                $variables += "common_iso_datastore=`"$(common_iso_datastore)`""
+              $variables = @()
+              $variables += "common_iso_datastore=`"$(common_iso_datastore)`""
 
-                $variables += "build_username=`"$(build_username)`""
-                $variables += "build_password=`"$(build_password)`""
+              $variables += "build_username=`"$(build_username)`""
+              $variables += "build_password=`"$(build_password)`""
 
-                $variables += "vsphere_endpoint=`"$(vsphere_endpoint)`""
-                $variables += "vsphere_username=`"$(vsphere_username)`""
-                $variables += "vsphere_password=`"$(vsphere_password)`""
+              $variables += "vsphere_endpoint=`"$(vsphere_endpoint)`""
+              $variables += "vsphere_username=`"$(vsphere_username)`""
+              $variables += "vsphere_password=`"$(vsphere_password)`""
 
-                $variables += "vsphere_datacenter=`"$(vsphere_datacenter)`""
-                $variables += "vsphere_cluster=`"$(vsphere_cluster)`""
-                $variables += "vsphere_datastore=`"$(vsphere_datastore)`""
-                $variables += "vsphere_network=`"$(vsphere_network)`""
-                $variables += "vsphere_folder=`"$(vsphere_folder)`""
+              $variables += "vsphere_datacenter=`"$(vsphere_datacenter)`""
+              $variables += "vsphere_cluster=`"$(vsphere_cluster)`""
+              $variables += "vsphere_datastore=`"$(vsphere_datastore)`""
+              $variables += "vsphere_network=`"$(vsphere_network)`""
+              $variables += "vsphere_folder=`"$(vsphere_folder)`""
 
-                Set-Content -Value $variables -Path packer/vmware/vsphere.pkrvars.hcl -Force
-              workingDirectory: '$(Build.SourcesDirectory)
+              Set-Content -Value $variables -Path packer/vmware/vsphere.pkrvars.hcl -Force
+            workingDirectory: '$(Build.SourcesDirectory)'
 
           - task: CmdLine@2
             displayName: 'Packer init'
