Double extends and removed the not yet used ansible pipeline

--- a/.devops/pipelines/azure.yml
+++ b/.devops/pipelines/azure.yml
@@ -45,11 +45,8 @@ extends:
     azureBuild: ${{ parameters.azureBuild }}
     azureRegion: ${{ parameters.azureRegion }}
 
+extends:
   template: azure/image.yml
   parameters:
     azureEnvironment: ${{ parameters.azureEnvironment }}
     azureWorkspace: ${{ parameters.azureWorkspace }}
-
-  template: azure/ansible.yml
-  parameters:
-    variable_group: VMware
