Use the public Azure Pool

--- a/.devops/pipelines/azure/infra.yml
+++ b/.devops/pipelines/azure/infra.yml
@@ -47,6 +47,10 @@ stages:
       - job: Build
         workspace:
           clean: all
+        
+        pool:
+          vmImage: 'ubuntu-latest'
+
         steps:
 
         - task: TerraformInstaller@0
